src/backend/crates/wnav_config/tests/compile_fail/terminal_no_write.stderr
warning: unreachable statement
  --> tests/compile_fail/terminal_no_write.rs:12:5
   |
11 |     let dummy: wnav_config::TerminalApiConfig = todo!();
   |                                                 ------- any code following this expression is unreachable
12 |     let _: () = dummy.database.write; //~ ERROR no field `write` on type `TerminalDatabaseConfig`
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
   |
   = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default

error[E0609]: no field `write` on type `TerminalDatabaseConfig`
  --> tests/compile_fail/terminal_no_write.rs:12:32
   |
12 |     let _: () = dummy.database.write; //~ ERROR no field `write` on type `TerminalDatabaseConfig`
   |                                ^^^^^ unknown field
   |
   = note: available fields are: `host`, `port`, `name`, `ssl_mode`, `max_connections` ... and 6 others
